plugins/themeEditor/css/style.css
#file-box {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 2em;
  clear: both;
}
#file-editor {
  flex-grow: 1;
}
#file-chooser {
  min-width: 14em;
  max-width: 20em;
}
#file-chooser h3,
#file-form h3 {
  font-variant: small-caps;
  margin-bottom: inherit;
}
#file-chooser ul {
  margin-top: 0;
  padding-left: 0;
}
#file-chooser li {
  list-style: none;
}
#file-chooser li.custom-file {
  color: var(--link-color);
  font-weight: bold;
}
#file-chooser li.default-file {
  color: var(--link-color);
}
#file-chooser li.parent-file {
  color: var(--breadcrumb-current);
}
#file-chooser li.group-file {
  margin-bottom: 1em;
}
#file-chooser li.group-file ul {
  margin-top: 0.5em;
}
textarea {
  font: clamp(90%, 0.9em, 2ex) var(--monospace);
  resize: vertical;
  overflow: auto;
}
.CodeMirror {
  border: 1px solid;
  height: 30em;
  font-size: clamp(90%, 0.9em, 2ex);
  resize: vertical;
  overflow: auto;
}
.CodeMirror-linenumber {
  font-size: 80%;
  line-height: 1.75;
}
#lock-form {
  margin-top: 2em;
}

